UP-3543 Layout options in the gallery no longer get caught on the border of the selected layout when linewrapping

--- a/uportal-war/src/main/webapp/media/skins/universality/uportal3/portal.css
+++ b/uportal-war/src/main/webapp/media/skins/universality/uportal3/portal.css
@@ -891,11 +891,11 @@
   background-image: linear-gradient(top, #333333, #0d0d0d);
 }
 .up .up-gallery .gallery-inner .results-wrapper .ri-wrapper.disabled {
-  -moz-opacity: 0.3;
-  opacity: 0.3;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=30);
-  filter: alpha(opacity=30);
-  border: none !important;
+  -moz-opacity: 0.2;
+  opacity: 0.2;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20);
+  filter: alpha(opacity=20);
+  border-color: #3A3A3A !important;
 }
 .up .up-gallery .gallery-inner .results-wrapper .ri-wrapper.disabled:hover, .up .up-gallery .gallery-inner .results-wrapper .ri-wrapper.disabled:focus,
 .up .up-gallery .gallery-inner .results-wrapper .ri-wrapper.disabled a:hover, .up .up-gallery .gallery-inner .results-wrapper .ri-wrapper.disabled a:focus {
@@ -927,7 +927,10 @@
 }
 .up .up-gallery .gallery-inner .results-wrapper .selected {
   background: #262626;
-  border: 3px solid #4682b4;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #4682b4;
+  margin-bottom: -6px;
 }
 .up .up-gallery .gallery-inner .results-wrapper .pager .pager-pagination {
   color: white;
